# qocha

./: .gitignore  README.md  pyproject.toml
conventions/: adaptation-checklist.md  schema-template.md  the-pattern.md  wiki-spec.md
demo/vault/: index.md  qocha.json
demo/vault/Sessions/: 2026-03-14-first-light-retro.md
demo/vault/raw/: shielded-fixture-quote.txt
demo/vault/wiki/: dark-sky-survey.md  harbor-hill-observatory.md  mirror-recoating-decision.md  shielded-fixture-quote.md  telescope-loan-program.md
harness/: ingest-agent-prompt.md
qocha/: __init__.py  answer.py  chunker.py  cli.py  config.py  embed.py  indexer.py  lint.py  scaffold.py  vault.py
tests/: test_chunker.py  test_harness.py  test_vault.py
